# hot-girl-shopify

./: .gitignore  package-lock.json  package.json  tsconfig.json
.claude/: launch.json  settings.local.json
bag-pipeline/: .env.example  RULES.md  cli.py  requirements.txt
data/: look-settings.json
ecomm-crop-pipeline/: README.md  RULES.md  requirements.txt  setup.sh
ecomm-pipeline/: .env.example  .gitignore  README.md  pyproject.toml
ecomm-pipeline/ecomm_pipeline/: __init__.py  __main__.py  cli.py  config.py  crop_runner.py  matching.py  models.py  push.py  sku.py
ecomm-pipeline/ecomm_pipeline/shopify/: __init__.py  auth.py  client.py  products.py
ecomm-pipeline/tests/: test_crop_runner.py  test_sku.py
japanese-invoice-transcriber/: CLAUDE.md  PLAN.md  PROGRESS.md  README.md  RULES.md  TODO.md  app.py  bulk_measurements.py  bulk_sku_editor.py  commercial_invoice.py  comps.py  cost_estimator.py  costs.py  csv_ingest.py  drop_audit.py  enrichers.py  extractors.py  invoice_index.py  photos.py  price.py  pricing.py  shopify.csv  shopify_inventory.py  shopify_oauth.py  shopify_push.py  shopify_taxonomy.py  snapshots.py  title_corrections.jsonl  title_learning.py  to_shopify.py  transcribe.py  verify.py  weekly_catalogue_audit.py  weekly_snapshot.py
launchd/: com.paststudies.stories.review.plist.template  install_stories.sh
ps_inventory_spec/: SPEC.md
scripts/: auto-deploy.sh  debug-ig-token.mjs  mockup-layouts.tsx  refresh-ig-token.mjs  sync.py  verify-ig-token.mjs
shop-photo-editor/: .gitignore  README.md  drizzle.config.ts  next.config.ts  package.json  (+1 more)
(+239 files in other folders)
