[project]
name = "ecomm-pipeline"
version = "0.1.0"
description = "Orchestrate Capture One export → crop pipeline → Shopify draft photo upload"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
]

# The crop pipeline is consumed as a SUBPROCESS against its own 3.9.6 venv
# (ecomm-crop-pipeline/.venv) — deliberately NOT a Python dependency here, so
# this package stays on a clean modern interpreter with no heavy ML deps.

[project.scripts]
ecomm-pipeline = "ecomm_pipeline.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ecomm_pipeline"]
